--- a/notebooks/2.0-rn-get_SAP_CVEs.ipynb
+++ b/notebooks/2.0-rn-get_SAP_CVEs.ipynb
@@ -24,17 +24,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Oct 13, 2024 5:31:00 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 18, 2024 7:16:20 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Oct 13, 2024 5:31:00 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 18, 2024 7:16:21 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Oct 13, 2024 5:31:01 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 18, 2024 7:16:21 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Oct 13, 2024 5:31:01 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 18, 2024 7:16:21 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans-Bold' for 'TimesNewRomanPS-BoldMT'\n",
-      "Oct 13, 2024 5:31:01 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 18, 2024 7:16:22 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans-Bold' for 'TimesNewRomanPS-BoldMT'\n",
-      "Oct 13, 2024 5:31:01 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Oct 18, 2024 7:16:22 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n"
      ]
     }
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "6adc6732-04ab-4fb5-951a-f0c35aa9f116",
    "metadata": {},
    "outputs": [],
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "53e14a71-aa2e-4b88-a964-e735af3d7d9e",
    "metadata": {},
    "outputs": [],
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "13572a35-dc45-4aa9-810f-9f2196db394e",
    "metadata": {},
    "outputs": [],
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "fefd5409-573f-4a23-a775-7f7c0fbf09f4",
    "metadata": {},
    "outputs": [],
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "d583b335-e77c-4b17-8f23-1a2fbf6652ac",
    "metadata": {},
    "outputs": [],
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "78c76c9c-b862-4bad-b808-d3ee0600b5cf",
    "metadata": {},
    "outputs": [],
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "3c0560a7-c48e-49a7-829d-e2270a983f1a",
    "metadata": {},
    "outputs": [],
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "0b3caee3-5cf7-4e95-8fd1-a124d744f2af",
    "metadata": {},
    "outputs": [],
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "b0dea6f3-2501-456b-a070-1ec9855f8be5",
    "metadata": {},
    "outputs": [],
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "c8b0dd68-6e43-44af-bb8e-e6dfbb28d205",
    "metadata": {},
    "outputs": [],
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "65b16fb1-f5fd-4181-9a87-001ce911b6da",
    "metadata": {},
    "outputs": [],
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "id": "d9a3c549-375f-48b8-b54f-c84195c74fc5",
    "metadata": {},
    "outputs": [],
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "id": "7d7d703a-989a-4ff8-afa2-a805c77202d4",
    "metadata": {},
    "outputs": [],
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "id": "7b1d6392-f965-4e21-b722-b8f83abd0ec8",
    "metadata": {},
    "outputs": [],
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "61aafa9a-362f-4dc8-87a3-79a3bfcf489a",
    "metadata": {},
    "outputs": [],
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "c24142c9-6ec8-4b43-9d7b-f0b17467489e",
    "metadata": {},
    "outputs": [],
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "19affe5c-337a-4a7d-9961-816a7a3d6a9a",
    "metadata": {},
    "outputs": [],
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "87dca2c1-fd9c-47a5-935e-64e76bade1ad",
    "metadata": {},
    "outputs": [],
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "c00a6b18-800d-4a48-8773-bf4441239fc3",
    "metadata": {},
    "outputs": [],
@@ -792,7 +792,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
+   "id": "6a2ed816-7708-40a0-9df8-f18aadaeb0b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2013-3587'),'cweId'] = 'CWE-200'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2019-0388'),'cweId'] = 'CWE-290'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2020-26816'),'cweId'] = 'CWE-312'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2020-6215'),'cweId'] = 'CWE-601'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2020-6224'),'cweId'] = 'CWE-532'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21445'),'cweId'] = 'CWE-444'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21449'),'cweId'] = 'CWE-119'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21465'),'cweId'] = 'CWE-89'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21469'),'cweId'] = 'CWE-200'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21470'),'cweId'] = 'CWE-611'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21472'),'cweId'] = 'CWE-306'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21474'),'cweId'] = 'CWE-326'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21475'),'cweId'] = 'CWE-22'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21476'),'cweId'] = 'CWE-601'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21477'),'cweId'] = 'CWE-94'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21478'),'cweId'] = 'CWE-601'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21488'),'cweId'] = 'CWE-502'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-21491'),'cweId'] = 'CWE-601'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-27610'),'cweId'] = 'CWE-287'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-27612'),'cweId'] = 'CWE-601'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-27638'),'cweId'] = 'CWE-20'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-33672'),'cweId'] = 'CWE-116'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-33676'),'cweId'] = 'CWE-862'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-33685'),'cweId'] = 'CWE-22'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-33687'),'cweId'] = 'CWE-200'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-33688'),'cweId'] = 'CWE-89'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-38150'),'cweId'] = 'CWE-312'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-38176'),'cweId'] = 'CWE-89'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-38177'),'cweId'] = 'CWE-476'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-40497'),'cweId'] = 'CWE-668'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-42064'),'cweId'] = 'CWE-89'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-42068'),'cweId'] = 'CWE-20'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2021-44232'),'cweId'] = 'CWE-22'\n",
+    "sap_cve_df.loc[(sap_cve_df['cve_id'] == 'CVE-2023-0215'),'cweId'] = 'CWE-416'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "id": "c2c777e4-7e94-4a4d-94c7-f461c256e467",
    "metadata": {},
    "outputs": [],
@@ -802,17 +845,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "id": "8b3b85ee-33d2-4a8b-a40c-423e860f04cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sap_cve_df.to_csv('sap_cve_last_03.csv', index=False)"
+    "sap_cve_df.to_csv('sap_cve_last_05.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "id": "094983a1-8ab2-48fe-8860-8692fbc0f0fa",
    "metadata": {},
    "outputs": [
@@ -822,7 +865,7 @@
        "90"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
