--- a/notebooks/2.0-rn-get_SAP_CVEs.ipynb
+++ b/notebooks/2.0-rn-get_SAP_CVEs.ipynb
@@ -24,17 +24,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Oct 18, 2024 7:16:20 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Nov 12, 2024 10:07:57 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Oct 18, 2024 7:16:21 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Nov 12, 2024 10:07:57 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Oct 18, 2024 7:16:21 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Nov 12, 2024 10:07:58 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Oct 18, 2024 7:16:21 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Nov 12, 2024 10:07:58 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans-Bold' for 'TimesNewRomanPS-BoldMT'\n",
-      "Oct 18, 2024 7:16:22 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Nov 12, 2024 10:07:58 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans-Bold' for 'TimesNewRomanPS-BoldMT'\n",
-      "Oct 18, 2024 7:16:22 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Nov 12, 2024 10:07:58 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n"
      ]
     }
@@ -174,6 +174,8 @@
     "sap_202409 = pd.read_html('https://support.sap.com/en/my-support/knowledge-base/security-notes-news/september-2024.html',\n",
     "                 flavor='html5lib')\n",
     "sap_202410 = pd.read_html('https://support.sap.com/en/my-support/knowledge-base/security-notes-news/october-2024.html',\n",
+    "                         flavor='html5lib')\n",
+    "sap_202411 = pd.read_html('https://support.sap.com/en/my-support/knowledge-base/security-notes-news/november-2024.html',\n",
     "                         flavor='html5lib')"
    ]
   },
@@ -186,20 +188,17 @@
     {
      "data": {
       "text/plain": [
-       "[      Note#                                              Title  Priority  CVSS\n",
-       " 0   3479478  Update to Security Note released on August 202...  Critical   9.8\n",
-       " 1   3523541  [CVE-2022-23302] Multiple vulnerabilities in S...      High   8.0\n",
-       " 2   3478615  [CVE-2024-37179] Insecure File Operations vuln...      High   7.7\n",
-       " 3   3483344  Update to Security Note released on July 2024 ...      High   7.7\n",
-       " 4   3495876  Update to Security Note released on August 202...    Medium   6.5\n",
-       " 5   3477359  Update to Security Note released on September ...    Medium   6.0\n",
-       " 6   3507545  [CVE-2024-45278] Cross-Site Scripting (XSS) vu...    Medium   5.4\n",
-       " 7   3503462  [CVE-2024-47594] Cross-Site Scripting (XSS) vu...    Medium   5.4\n",
-       " 8   3520100  [CVE-2024-45277] Prototype Pollution vulnerabi...    Medium   4.3\n",
-       " 9   3251893  [CVE-2024-45282] HTTP Verb Tampering in SAP S/...    Medium   4.3\n",
-       " 10  3481588  Update to Security Note released on September ...    Medium   4.3\n",
-       " 11  3479293  Update to Security Note released on August 202...    Medium   4.3\n",
-       " 12  3454858  Update to Security Note released on July 2024 ...    Medium   4.1]"
+       "[     Note#                                              Title Priority  CVSS\n",
+       " 0  3520281  [CVE-2024-47590] Cross-Site Scripting (XSS) vu...     High   8.8\n",
+       " 1  3483344  Update to Security Note released on July 2024 ...     High   7.7\n",
+       " 2  3335394  [CVE-2024-42372] Missing Authorization check i...   Medium   6.5\n",
+       " 3  3509619  [CVE-2024-47595] Local Privilege Escalation in...   Medium   6.3\n",
+       " 4  3393899  [CVE-2024-47592] Information Disclosure Vulner...   Medium   5.3\n",
+       " 5  3504390  [CVE-2024-47586] NULL Pointer Dereference vuln...   Medium   5.3\n",
+       " 6  3522953  [CVE-2024-47588] Information Disclosure vulner...   Medium   4.7\n",
+       " 7  3508947  [CVE-2024-47593] Information Disclosure Vulner...   Medium   4.3\n",
+       " 8  3498470  [CVE-2024-47587] Missing authorization check i...      Low   3.5\n",
+       " 9  3392049  Update to Security Note released on May 2024 P...      Low   3.5]"
       ]
      },
      "execution_count": 11,
@@ -208,7 +207,7 @@
     }
    ],
    "source": [
-    "sap_202410"
+    "sap_202411"
    ]
   },
   {
@@ -246,7 +245,8 @@
     "sap_202407_df = etData2(sap_202407)\n",
     "sap_202408_df = etData2(sap_202408)\n",
     "sap_202409_df = etData2(sap_202409)\n",
-    "sap_202410_df = etData2(sap_202410)"
+    "sap_202410_df = etData2(sap_202410)\n",
+    "sap_202411_df = etData2(sap_202411)"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sap_2024_ls = [sap_202401_df,sap_202402_df,sap_202403_df,sap_202404_df,sap_202405_df,sap_202406_df,sap_202407_df,sap_202408_df,sap_202409_df,sap_202410_df]\n",
+    "sap_2024_ls = [sap_202401_df,sap_202402_df,sap_202403_df,sap_202404_df,sap_202405_df,sap_202406_df,sap_202407_df,sap_202408_df,sap_202409_df,sap_202410_df,sap_202411_df]\n",
     "sap_2024_df = pd.concat(sap_2024_ls)"
    ]
   },
@@ -413,7 +413,7 @@
     "sp_sap_cve_2023 = dataframeSplotscan('sap_history_data_curate/sp_2023_last.json')\n",
     "sp_sap_cve_2023.drop_duplicates(subset=['cve_id'], inplace=True)\n",
     "#sp_sap_cve_2024 = dataframeSplotscan('sap_history/sp_sap_2024.json')\n",
-    "sp_sap_cve_2024 = dataframeSplotscan('sap_history_data_curate/sp_2024_new.json')\n",
+    "sp_sap_cve_2024 = dataframeSplotscan('sap_history_data_curate/sp_2024_last.json')\n",
     "sp_sap_cve_2024.drop_duplicates(subset=['cve_id'], inplace=True)"
    ]
   },
@@ -428,7 +428,8 @@
     "cp_sap_cve_2022 = pd.read_csv('sap_history_data_curate/sap_2022_clean.csv')\n",
     "cp_sap_cve_2023 = pd.read_csv('sap_history_data_curate/sap_2023_clean.csv')\n",
     "#cp_sap_cve_2024 = pd.read_csv('sap_history_data_curate/cveprio_sap_2024.csv')\n",
-    "cp_sap_cve_2024 = pd.read_csv('sap_history_data_curate/sap_202410.csv')"
+    "#cp_sap_cve_2024 = pd.read_csv('sap_history_data_curate/sap_202410.csv')\n",
+    "cp_sap_cve_2024 = pd.read_csv('sap_history_data_curate/202411_cve_prio.csv')"
    ]
   },
   {
@@ -850,7 +851,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sap_cve_df.to_csv('sap_cve_last_05.csv', index=False)"
+    "sap_cve_df.to_csv('sap_cve_last_06.csv', index=False)"
    ]
   },
   {
